RESOLVED FIXED44765
Web Inspector: Elements panel breaks after calling "Edit as HTML" on <body>
https://bugs.webkit.org/show_bug.cgi?id=44765
Summary Web Inspector: Elements panel breaks after calling "Edit as HTML" on <body>
Pavel Feldman
Reported 2010-08-27 07:02:38 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix. (1.30 KB, patch)
2010-08-27 07:05 PDT, Pavel Feldman
yurys: review+
[PATCH] Variation to land. (2.56 KB, patch)
2010-08-27 07:17 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-08-27 07:05:57 PDT
Created attachment 65711 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-08-27 07:17:45 PDT
Created attachment 65712 [details] [PATCH] Variation to land.
Pavel Feldman
Comment 3 2010-08-27 07:22:12 PDT
Comment on attachment 65712 [details] [PATCH] Variation to land. Clearing flags on attachment: 65712 Committed r66222: <http://trac.webkit.org/changeset/66222>
Pavel Feldman
Comment 4 2010-08-27 07:22:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.