2010-08-27  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Elements panel breaks after calling "Edit as HTML" on <body>
        https://bugs.webkit.org/show_bug.cgi?id=44765

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::setOuterHTML):

Canonical link: https://commits.webkit.org/56994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66222 268f45cc-cd09-0410-ab3c-d52691b4dbfc